--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,3 @@
 body {
-  background-color: #d4d4d4;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  height: 100%; }
+  font-size: 12px; }
