--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,11 @@
-body {
+.body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px; }
+  font-size: 12px; 
+}
+#columnLeft {
+width: 20%;
+float:left;
+background: white;
+padding-bottom: 1em;
+text-align: justify;
+}
