--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,19 @@
+a:link {
+  font-family: Arial, Helvetica, sans-serif;
+font-size: 12px;
+text-decoration: none;
+color: #0066CC;
+} 
+
+a:visited {
+color: #0066CC;
+} 
+
 .body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px; 
 }
+
 #columnLeft {
 width: 20%;
 float:left;
