Add github url to default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,14 +26,13 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Rahman<br />
+                rjarmand@yahoo.com
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
+                <a href="https://github.com/rjarmand">github.com/rjarmand</a><br />
                 <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
               </p>
             </div>
