Add mailto link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,12 @@
             <div class="contact">
               <p>
                 Rahman<br />
-                rjarmand@yahoo.com
+                <a href="mailto:rjarmand@yahoo.com">rjarmand@yahoo.com</a>
               </p>
             </div>
             <div class="contact">
               <p>
                 <a href="https://github.com/rjarmand">github.com/rjarmand</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
               </p>
             </div>
           </div>
