--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,14 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Rahman<br />
+                Rahman Hayes<br />
                 <a href="mailto:rjarmand@yahoo.com">rjarmand@yahoo.com</a>
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/rjarmand">github.com/rjarmand</a><br />
+             <a href="https://www.linkedin.com/in/rahmanhayes/">linkedin.com/in/rahmanhayes/</a><br />
+             <a href="https://github.com/rjarmand">github.com/rjarmand</a><br />
               </p>
             </div>
           </div>
