--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
-            <a class="extra" href="http://www.coroflot.com/rjarmand/" target=_"blank">portfolio</a>
+            <a class="extra" href="/portfolio/">portfolio</a>
             <a class="extra" href="/about/">about me</a>
           </div>
 
