Add CSS to portfolio

--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,18 @@ a:visited { color: #a0a; }
 .post pre.terminal code {
   background-color: #333;
 }
+
+/* projects */
+
+#projects {
+
+}
+
+.coroflot {
+  background: #222219;
+}
+
+.mydrupal {
+  background: #222219;
+}
+
