--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,15 @@ text-align: center;
   width: 50%;
 }
 
+.project a, .project > p {
+  font-size: 2.6rem;
+  padding: 11rem 1rem 0 1rem;
+  width: 100%;
+  height: 100%;
+  display: block;
+  font-weight: 300;
+}
+
 .coroflot {
   background: #222219;
 }
@@ -178,4 +187,5 @@ text-align: center;
 .mydrupal {
   background: #383830;
 }
+
 
