--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,8 @@ text-align: center;
   height: 100%;
   display: block;
   font-weight: 300;
+  text-decoration: none;
+  color: #0000FF;
 }
 
 .coroflot {
