Change color of Portfolio text

--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ text-align: center;
   display: block;
   font-weight: 300;
   text-decoration: none;
-  color: #0000FF;
+  color: #FFFFFF;
 }
 
 .coroflot {
