Added projectContainer ID

--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,10 @@ a:visited { color: #a0a; }
 
 /* projects */
 
+#projectContainer {
+  overflow: auto;
+}
+
 .projects {
 text-align: center;
 }
